fix too low of body padding, some of pages get cutoff by menu

--- a/rg.less
+++ b/rg.less
@@ -56,7 +56,7 @@ body {
 
 @media (min-width: @screen-sm-min) {
   body {
-    padding-top: 291px;
+    padding-top: 300px;
   }
   body.landing {
     padding-top: 0;
